Scenario 1 and refactoring